client/app/sticker/sticker.css
.sticker_panel {
  bottom: 30px !important;
  padding-top:0px !important;
  padding-bottom:0px !important;
  opacity: 0;
  display: none;
  -webkit-transition: opacity .15s ease;
  transition: opacity .15s ease;
}

.sticker_panel.open {
  display: block;
}
.sticker_panel.vivid {
  opacity: 1;
}

.sticker_panel:focus {
  outline: 0;
}
.sticker_panel_wrap {
  position: absolute;
  right: 10px;
  bottom: 8px;
  width:16px;
  z-index: 1000;
}
.sticker_panel_wrap.shift{
  right: 20px;
}
.sticker_panel_wrap .sticker_panel_btn {
  position: relative;
  width: 18px;
  height: 18px;
  line-height: 23px;
  display: block;
  opacity: 0.3;
  font-size: 18px;
  color: black;
  text-decoration: none;
}
.sticker_panel_wrap .sticker_panel_btn.on {
  color: #00abe6;
  opacity: 0.9;
}

.sticker_panel_wrap .sticker_panel_btn > .mouse {
  position: absolute;
  top: .63em;
  left: 5px;
  height: 1.5px;
  width: .47em;
  background-color: #fff;
  display: inline-block;
  border-left: 1px solid rgba(0, 0, 0, .8);
  border-right: 1px solid rgba(0, 0, 0, .8);
  border-bottom: 1px solid rgba(0, 0, 0, .8);
  border-bottom-right-radius: 12px 8px;
  border-bottom-left-radius: 12px 8px;
  -webkit-transition: height .12s linear;
  transition: height .12s linear;
}
.sticker_panel_wrap .sticker_panel_btn.on > .mouse {
  height: 3.5px;
  border-color: #00abe6;
  border-bottom: 1px solid #00abe6;
}

.sticker_panel_wrap .sticker_panel_btn > .lip {
  position: absolute;
  top: .57em;
  left: 4px;
  width: .58em;
  height: 4px;
  background-color: #fff;
  display: inline-block;
  border-top: 1px solid rgba(0, 0, 0, .8);
}
.sticker_panel_wrap .sticker_panel_btn.on > .lip {
  border-color: #00abe6;
}

.sticker_panel_contents ul li{overflow:hidden;}
.sticker_panel_contents {
  /*width: 328px !important;
  height: 292px !important;*/
  max-height: 300px;
  overflow-y: auto;
  overflow-x: hidden;
}

.sticker_panel_contents .sticker_empty {
  background: #f1f4f8;
  color: #154a67;
  text-align: center;
  padding-top: 91px;
  height: 100%;
}
.sticker_panel_empty_icon {
  font-size: 46px;
  opacity: 0.3;
  margin-bottom: 12px;
}
.sticker_panel_empty_text {
  font-size: 14px;
  opacity: 0.5;
}

.sticker_panel_ul {
  list-style-type: none;
  padding: 7px;
}
.sticker_panel_li {
  float: left;
  width: 70px;
  height: 70px;
  margin-left: 7px;
  text-align: center;
  line-height: 21px;
  border: 2px solid #FFFFFF;
}
.sticker_panel_li.active {
  background-color: #d7e0e8;
  border-radius: 11px;
}
.sticker_panel_tab {
  height: 35px;
  clear: both;
  background-color: #f1f4f8;
  border-top: 1px solid #d7e0e8;
  color: #154a67;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}
.sticker_panel_tab ul{
  display: table;
  list-style-type: none;
  padding: 0;
  margin: 0;
  height: 100%;
}
.sticker_panel_tab li {
  vertical-align: middle;
  display: table-cell;
  height: 100%;
  border-right: 1px solid #d7e0e8;
  width: 35px;
  text-align: center;
  cursor: pointer;
}
.sticker_panel_tab li.on {
  background-color: white;
}

.sticker_panel_tab_item {
  min-height: 20px;
  background-repeat: no-repeat;
  background-position: center;
}

.sticker_panel_tab_item.recent {
  font-size: 20px;
  opacity: 0.4;
}

.sticker_panel_tab_item.recent.on {
  opacity: 1;
}

.sticker_panel_tab_item img {
  width: 20px;
  height: 20px;
}

sticker-layer {
  position: relative;
}
.sticker_layer {
  z-index:2;
  height: 150px;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.9);
  position:relative;
  border: solid #d7e0e8;
  border-width: 2px 2px 0 2px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  padding-left: 20px;
  padding-bottom: 10px;
}
.sticker_layer img {

}
.sticker_layer_remove {
  position: absolute;
  top: 10px;
  right: 10px;
}

img.sticker {
  vertical-align: text-bottom;
}

img.sticker.size_5 {
  width: 145px;
  height: 145px;
}
img.sticker.size_1 {
  width: 65px;
  height: 65px;
}

